--- a/fe/src/reset.css
+++ b/fe/src/reset.css
@@ -2,7 +2,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 #root {
@@ -21,4 +21,7 @@ li {
 
 a {
   text-decoration: none;
+}
+a:visited {
+  color: black;
 }
