--- a/fe/src/reset.css
+++ b/fe/src/reset.css
@@ -1,6 +1,12 @@
 html,
 body {
   font-family: 'Noto Sans KR', sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 * {
